Agregado de seccion en el inicio

--- a/index.html
+++ b/index.html
@@ -79,6 +79,24 @@
       </div>
     </div>
 
+        <div class="site-section-3" id="inicio">
+      <div class="container">
+        <div class="row mb-2 py-0">
+          
+          <div class="col-md-5 ml-auto mb-5 order-md-2">
+            <img src="images/inicio-2.jpg" alt="Image" class="img-fluid rounded">
+          </div>
+          <div class="col-md-6 order-md-1">
+            <div class="text-left pb-1 mb-4">
+              <h2 class="text-white">Somos EXE Estudios</h2>
+            </div>
+            <p>Ut nulla aute magna magna incididunt ad cupidatat sed ullamco. Ea aute deserunt adipisicing aute ex culpa quis id proident dolore irure aute laborum veniam amet cupidatat quis deserunt. Sit duis deserunt enim anim nulla ut consequat quis sint. Veniam fugiat ex culpa et minim occaecat amet sunt ut non commodo nostrud.</p>
+            <p class="mb-5">Ut nulla aute magna magna incididunt ad cupidatat sed ullamco. Ea aute deserunt adipisicing aute ex culpa quis id proident dolore irure aute laborum veniam amet cupidatat quis deserunt. Sit duis deserunt enim anim nulla ut consequat quis sint. Veniam fugiat ex culpa et minim occaecat amet sunt ut non commodo nostrud.</p>            
+          </div>  
+        </div>
+      </div>
+    </div>
+
 
 
     <div class="site-section-2" id="inicio-2">
